# odi

./: .dockerignore  .gitignore  Cargo.toml  README.md  clippy.toml  docker-compose.yml  rustfmt.toml
.docker/: README.md
.docker/git-repos/: index.html
.docker/git-repos/test-repo.git/: description
.docker/https-repos/: index.html
.docker/https-repos/test-repo.odi/: README.txt
.docker/ssl-certs/: server.crt  server.key
.github/: copilot-instructions.md
.odi/: config
.specify/memory/: constitution.md
docs/: README.md  architecture.md  commands.md  configuration.md  contributing.md  development.md  examples.md  getting-started.md  remote-testing.md  sync.md
odi/: Cargo.toml
odi-core/: Cargo.toml
odi-core/src/: error.rs  issue.rs  lib.rs  project.rs  sync.rs  user.rs
odi-core/src/issue/: mod.rs  repository.rs
odi-core/src/project/: label.rs  mod.rs  repository.rs  workspace.rs
odi-core/src/sync/: engine.rs  mod.rs  remote.rs  repository.rs
odi-core/src/user/: mod.rs  repository.rs  team.rs
odi-fs/: Cargo.toml
odi-fs/src/: config.rs  error.rs  git.rs  lib.rs  repository.rs  storage.rs
odi-net/: Cargo.toml
odi-net/src/: auth.rs  error.rs  lib.rs  protocol.rs  protocols.rs  sync.rs
odi/src/: cli.rs  error.rs  integration.rs  lib.rs  main.rs
odi/src/commands/: config.rs  fsck.rs  init.rs  issue.rs  label.rs  mod.rs  project.rs  pull.rs  push.rs  remote.rs  team.rs
scripts/: test-docker-setup.sh  test-remote-cleanup.sh  test-remote-setup.sh
specs/: 002-requirements.md
specs/001-distributed-issue-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-distributed-issue-tracking/contracts/: cli-commands.md  crate-interfaces.md
tests/: Cargo.toml
tests/contract/: mod.rs  test_cli_config.rs  test_cli_init.rs  test_cli_issue.rs  test_cli_project.rs  test_cli_remote.rs  test_cli_team.rs  test_core_issue.rs  test_core_project.rs  test_core_user.rs  test_fs_config.rs  test_fs_storage.rs  test_net_protocol.rs  test_net_sync.rs
tests/integration/: bench_performance.rs  test_complete_workflow.rs  test_concurrent_operations.rs  test_implementation_gaps.rs  test_specification_compliance.rs
