[workspace]
members = [
    "odi",
    "odi-core", 
    "odi-fs",
    "odi-net",
    "tests"
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# CLI and configuration
clap = { version = "4.0", features = ["derive", "env"] }
toml = "0.8"

# Networking  
reqwest = { version = "0.11", features = ["json"] }

# Cryptography and compression
sha2 = "0.10"
flate2 = "1.0"
bincode = "1.3"

# Development dependencies
tempfile = "3.0"
serde_json = "1.0"
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 2
overflow-checks = true