[package]
name = "odi-core"
version = "0.1.0"
edition = "2021"
authors = ["ODI Contributors"]
description = "Core domain logic for ODI distributed issue tracking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/odi"
keywords = ["issue-tracking", "domain", "entities"]
categories = ["data-structures", "development-tools"]

[lib]
name = "odi_core"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies
regex = "1.0"
url = "2.0"
async-trait = "0.1"
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
tempfile = { workspace = true }