[package]
name = "odi-fs"
version = "0.1.0"
edition = "2021"
authors = ["ODI Contributors"]
description = "Filesystem operations for ODI distributed issue tracking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/odi"
keywords = ["filesystem", "storage", "configuration", "git"]
categories = ["filesystem", "config", "development-tools"]

[lib]
name = "odi_fs"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
odi-core = { path = "../odi-core" }
serde = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

# Filesystem and compression
sha2 = { workspace = true }
flate2 = { workspace = true }
hex = "0.4"
async-trait = "0.1"
serde_json = "1.0"

# Git integration (optional)
git2 = { version = "0.18", optional = true }

# File watching and locking
fs4 = "0.7"
uuid = { workspace = true }

[features]
default = ["git-integration"]
git-integration = ["git2"]

[dev-dependencies]
tempfile = { workspace = true }